app-of-apps/templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    name: longhorn-system
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    name: cert-manager
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
  labels:
    name: portainer
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: heimdall
  labels:
    name: heimdall
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
  labels:
    name: code-server
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels:
    name: oauth2-proxy
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: sealed-secrets
  labels:
    name: sealed-secrets
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
  labels:
    name: kubernetes-dashboard
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: snipe-it
  labels:
    name: snipe-it
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
  labels:
    name: mysql
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: snippet-box
  labels:
    name: snippet-box
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: grocy
  labels:
    name: grocy
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: rstudio
  labels:
    name: rstudio
    annotations:
      argocd.argoproj.io/sync-wave: "-1"
